[metadata]
name = monanas
#name = monasca-analytics

summary = Monanas - Monasca Analytics
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://launchpad.net/monasca
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    monasca_analytics
    test

#data_files =
#    etc/monasca =
#        etc/monasca/analytics-config.conf
#        etc/monasca/analytics-config.ini

[entry_points]
#console_scripts =
#    monasca-analytics = monasca_analytics.server:launch
#
#tempest.test_plugins =
#    monasca_analytics_tests = monasca_analytics_tests.plugin:MonascaAnalyticsTempestPlugin

[pbr]
warnerrors = True

